# sandbox-python

./: .deepsource.toml  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.flyway  LeetCode_Links.md  LeetCode_patterns.md  Makefile  README.md  docker-compose.yml  environment.yml  licenses.md  pyproject.toml
.github/workflows/: run-ruff.yml  run-tests.yml  static-code-analysis.yml  update_leetcode_links.yml
algorithms/: .dockerignore  Makefile  licenses.md  primes.py  pyproject.toml  sorting.py
algorithms/combinatorics/: fibonacci.py  recaman.py
algorithms/images/: bmp.py  fractal.py
algorithms/src/: juliaset.py  moving_avg.py  primes.py
algorithms/src/combinatorics/: fibonacci.py  recaman.py
algorithms/src/diffusion/: diffusion_np.py  diffusion_numexpr.py  runner.py
algorithms/src/dynamic_programming/: p_10_grid_traveler_tabulation.py  p_12_how_sum_tabulation.py  p_13_best_sum_tabulation.py  p_14_can_construct_tabulation.py  p_16_all_construct_tabulation.py  p_2_grid_traveler.py  p_3_can_sum.py  p_4_how_sum.py  p_5_best_sum.py  p_6_can_construct.py  p_7_count_construct.py  p_8_all_construct.py  p_9_fibonacci_tabulation.py
algorithms/src/images/: bmp.py  fractal.py
algorithms/src/leetcode/: p_026_remove_duplicates.py  p_070_climb_stairs.py  p_1043_partition_array_for_max_sum.py  p_1074_number_submatrices_sum_to_target.py  p_1143_longest_common_subsequence.py  p_1239_maximum_length.py  p_1291_sequential_digits.py  p_1457_pseudopalindromic_paths.py  p_1463_cherry_pickup_2_robots.py  p_1481_least_num_unique_after_k_removals.py  p_150_eval_reverse_polish_notation.py  p_169_majority_element.py  p_198_house_robber.py  p_2108_find_first_palindromic_string.py  p_2149_rearrange_array_elements_by_sign.py  p_231_power_of_two.py  p_232_queue_using_stacks.py  p_2402_meeting_rooms_3.py  p_279_perfect_squares.py  p_295_find_median_from_data_stream.py  p_2966_divide_array_into_arrays_with_max_diff.py  p_2971_find_polygon_with_the_largest_perimeter.py  p_368_largest_divisible_subset.py  p_387_first_unique_character_in_string.py  p_451_sort_characteres_by_frequency.py  p_49_group_anagrams.py  p_576_out_of_boundary_paths.py  p_629_k_inverse_pairs_array.py  p_647_palindromic_substrings.py  p_739_daily_temperatures.py  p_741_cherry_pickup.py  p_76_minimum_window_substring.py  p_907_sum_subarray_minimums.py  p_931_min_falling_path_sum.py
algorithms/src/optimization/: jenks.py
algorithms/src/strings/: distance.py  edits.py  palindromes.py  permutation.py  substrings.py  suffixes.py  unique_chars.py  url.py
algorithms/strings/: distance.py  edits.py  permutation.py  substrings.py  suffixes.py  unique_chars.py  url.py
algorithms/tests/: conftest.py
algorithms/tests/combinatorics/: test_fibonacci.py
algorithms/tests/dynamic_programming/: test_can_sum.py  test_p_1_fibonacci.py  test_p_3_can_sum.py
algorithms/tests/leetcode/: test_p_026_remove_duplicates.py  test_p_070_climb_stairs.py  test_p_1043_partition_array_for_max_sum.py  test_p_1074_number_submatrices_sum_to_target.py  test_p_1143_longest_common_subsequence.py  test_p_1239_maximum_length.py  test_p_1291_sequential_digits.py  test_p_1457_pseudopalindromic_paths.py  test_p_1481_least_num_unique_after_k_removals.py  test_p_150_eval_reverse_polish_notation.py  test_p_1642_furthest_building_you_can_reach.py  test_p_169_majority_element.py  test_p_198_house_robber.py  test_p_2108_find_first_palindromic_string.py  test_p_2149_rearrange_array_elements_by_sign.py  test_p_231_power_of_two.py  test_p_232_queue_using_stacks.py  test_p_2402_meeting_rooms_3.py  test_p_2966_divide_array_into_arrays_with_max_diff.py  test_p_2971_find_polygon_with_the_largest_perimeter.py  test_p_387_first_unique_character_in_string.py  test_p_49_group_anagrams.py  test_p_576_out_of_boundary_paths.py  test_p_629_k_inverse_pairs_array.py  test_p_645_set_mismatch.py  test_p_647_palindromic_substrings.py  test_p_739_daily_temperatures.py  test_p_76_minimum_window_substring.py  test_p_907_sum_subarray_minimums.py  test_p_931_min_falling_path_sum.py
collab_filter_recomendation/: environment.yml
fundamentals/: airtravel.py  airtravel2.py  bmp.py  fileprocessing.py  iterables.py  mypy_demo.py  recaman.py  series.py  setup.py  sub_test.py  url_request.py  words.py
fundamentals/file_processing/: read_file_content.py
poetry_local_env_test/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  cli.py  licenses.md  pyproject.toml
poetry_local_env_test/src/: primes.py
poetry_tests/: .gitignore  Makefile  cli.py  licenses.md  pyproject.toml
profiling/: .gitignore  Makefile  README.md  cli.py  cli_config.py  licenses.md  pyproject.toml
profiling/notebooks/: 000_sandbox.ipynb  decreasing_price.ipynb  loc_price_competitor_increasing.ipynb  nb_profiling_calc_slope.ipynb  nb_profiling_ce_rules.ipynb  nb_profiling_numba_snippets.ipynb  nb_profiling_simple_commands.ipynb  price_competitor_increasing.ipynb
profiling/src/: mem_usage_example.py  profiling.py  utils.py
profiling/src/algos/: dummy_algo.py
profiling/src/algos/juliaset/: Makefile  cythonfn.c  cythonfn.html  cythonfn.pyx  juliaset.py  juliaset_cy.py  setup.py
profiling/tests/: test_dummy_algo.py
py_builder/: build.py  setup.py
py_fundamentals/: .gitignore  Makefile  licenses.md  pyproject.toml
py_fundamentals/src/: immutable_config.py  iterables.py
py_fundamentals/src/decorators/: timing.py
py_fundamentals/src/file_processing/: read_file_content.py
py_fundamentals/src/generators/: basic.py  lazy_load_data.py
py_fundamentals/src/pg_db/: db.py
py_fundamentals/src/py_oop/: concurrency.py
py_fundamentals/src/py_oop/airtravel/: airtravel.py  airtravel2.py
py_fundamentals/src/py_oop/dataservice/: config.py  db.py  retry.py
py_fundamentals/tests/generators/: test_basic.py
py_ml_libs/: README.md
scripts/: generate_leetcode_links_md.py
src/: common.py  data_structures.py  scratch_file.py  trees.py
tests/: conftest.py  test_binary_tree.py  test_data_structures.py  test_p_1915_number_wonderful_substrings.py  test_trie_tree.py
(+588 files in other folders)
