[tool.poetry]
authors = ["Jean Metz"]
description = "CS algorithms implementation"
license = "MIT"
name = "algorithms"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
ipython = "^8.20.0"
environs = "^10.3.0"
pip = "^23.3.2"
pandas = "^2.1.4"
black = "^23.12.1"
ipdb = "^0.13.13"
isort = "^5.13.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
colorama = "^0.4.6"


[tool.poetry.extras]
jupyter = ["ipykernel", "jupyterlab"]

[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"


[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    ".mypy_cache",
    ".reports",
    ".git",
    "**/tests/*",
]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"