[tool.poetry]
authors = ["Jean Metz"]
description = "Test CI setup from a poetry based project"
name = "poetry_test"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
pip = "^21.0.1"
python = "^3.9.2"
click = "^7.1.2"
black = "^20.8b1"
colorama = "^0.4.4"
ipdb = "^0.13.4"
isort = "^5.7.0"
pip-licenses = "^3.3.0"
flake9 = "^3.8.3.post2"


[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"


[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
