[tool.poetry]
authors = ["Jean Metz"]
description = "Profiling python code examples"
license = "MIT"
name = "python-profiling"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
Cython = "^0.29.23"
Pillow = "^9.0.1"
click = "^7.1.2"
colorama = "^0.4.4"
environs = "^9.3.0"
ipykernel = {version = "^5.4.3", optional = true}
ipython = "^7.20.0"
jupyterlab = {version = "^3.0.6", optional = true}
line-profiler = "^3.1.0"
llvmlite = "0.35.0"
matplotlib = "^3.3.4"
memory-profiler = "^0.58.0"
numba = {version = "^0.52.0", python = "^3.8.0"}
numpy = "1.20.0"
pandas = "^1.2.1"
pandas-profiling = "^2.10.0"
pip = "^21.0.1"
psutil = "^5.8.0"
py-heat-magic = {version = "^0.0.2", optional = true}
py-spy = "^0.3.4"
pydantic = "^1.7.3"
pyinstrument = "^3.3.0"
pyinstrument-flame = "^1.0.2"
python = "3.8.2"
scipy = "^1.6.0"
snakeviz = "^2.1.0"
tabulate = "^0.8.7"
tqdm = "^4.56.0"
filprofiler = "^2021.5.0"

[tool.poetry.dev-dependencies]
PTable = "^0.9.2"
black = "^20.8b1"
coverage = "^5.4"
flake9 = "^3.8.3.post2"
ipdb = "^0.13.4"
isort = "^5.7.0"
mypy = "^0.800"
pip-licenses = "^3.3.0"
pipdeptree = "^2.0.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-datadir = "^1.3.1"
pytest-datafiles = "^2.0"
pytest-forked = "^1.3.0"
pytest-mock = "^3.5.1"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.0"
toml = "0.10.2"

[tool.poetry.extras]
jupyter = ["ipykernel", "jupyterlab", "py-heat-magic"]

[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = "E203, W503"
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --strict-markers --cov=src --cov-branch tests"
markers = [
  "unit: marks tests as unit tests (deselect with '-m \"not integration\"')",
  "api: marks tests as api tests (deselect with '-m \"not unit\"')",
  "asyncio: marks tests as asynchronous",
]

[tool.coverage.report]
omit = [
  "**/__init__.py",
  ".mypy_cache",
  ".reports",
  ".git",
  "**/tests/*",
]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
