[tool.poetry]
authors = ["Jean Metz"]
description = "Python fundamentals"
license = "MIT"
name = "Python fundamentals"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
Pillow = "^8.1.0"
environs = "^9.3.0"
ipython = "^7.20.0"
numpy = "1.20.0"
pip = "^21.0.1"
pydantic = "^1.7.3"
python = "3.9.2"
scipy = "^1.6.0"
tqdm = "^4.56.0"
ipykernel = {version = "^5.4.3", optional = true}
jupyterlab = {version = "^3.0.12", optional = true}
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
colorama = "^0.4.4"
coverage = "^5.4"
ipdb = "^0.13.4"
isort = "^5.7.0"
mypy = "^0.800"
pip-licenses = "^3.3.0"
pipdeptree = "^2.0.0"
flake9 = "^3.8.3.post2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-datadir = "^1.3.1"
pytest-datafiles = "^2.0"
pytest-forked = "^1.3.0"
pytest-mock = "^3.5.1"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.0"
toml = "0.10.2"

[tool.poetry.extras]
jupyter = ["ipykernel", "jupyterlab"]

[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"


[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-branch tests"
markers = [
  "unit: marks tests as unit tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.report]
omit = [
  "**/__init__.py",
  ".mypy_cache",
  ".reports",
  ".git",
  "**/tests/*",
]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
